cmake_minimum_required(VERSION 2.8)

#FILE(REMOVE ${CMAKE_CURRENT_LIST_DIR}/bin/csvplot )

FILE(COPY        ${CMAKE_CURRENT_LIST_DIR}/csvplot.py
     DESTINATION ${CMAKE_CURRENT_LIST_DIR}/bin )
FILE(RENAME ${CMAKE_CURRENT_LIST_DIR}/bin/csvplot.py ${CMAKE_CURRENT_LIST_DIR}/bin/csvplot)

INSTALL(PROGRAMS ${CMAKE_CURRENT_LIST_DIR}/bin/csvplot DESTINATION bin)
